# hello-fastapi-poetry

./: .env  Dockerfile  PHASE5_SUMMARY.md  README.md  create_sample_notes.py  debug_notes.py  docker-compose.yml  generate_test_set.py  migrate_local.py  pyproject.toml  qa_results.yaml  qa_results_complete.yaml  qa_results_fast.yaml  test_interactive.py  test_interactive_simple.py  test_qa_complete.py  test_qa_fast.py  test_qa_local.py  testset.yaml
notebooks/: phase4Test.ipynb  test.ipynb
src/hello_api/: api_client.py  config.py  db.py  embeddings.py  main.py  migrations.py  qa.py  qa_demo.py  qa_simple.py  routes.py  schemas.py
src/hello_api/.ipynb_checkpoints/: config-checkpoint.py
src/hello_api/notes/: models.py  routes.py  schema.py
src/hello_api/routes/.ipynb_checkpoints/: notes-checkpoint.py
