[tool.poetry]
name = "hello-fastapi-poetry"
version = "0.1.0"
description = "A simple FastAPI app with Docker and Poetry"
authors = ["varshakumarr <varshaprv19@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.116.0"
uvicorn = "^0.35.0"
pydantic = "^2.11.7"
pydantic-settings = "^2.10.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"